--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
     "jest": true
   },
   "rules": {
-    "no-console": 1,
+    "no-console": 0,
+    "arrow-parens": 0,
+    "implicit-arrow-linebreak": 0,
+    "object-curly-spacing": 0,
     "node/exports-style": ["error", "module.exports"],
     "node/file-extension-in-import": ["error", "always"],
     "node/prefer-global/buffer": ["error", "always"],
