--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/Anastasija3587/AppCo_test#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "sequelize": "^5.21.12",
+    "sequelize-auto-migrations": "^1.0.3",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "sequelize-cli": "^5.5.1"
   }
 }
