--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,7 +3,6 @@
 const path = require('path');
 
 module.exports = {
-    'config': path.resolve(__dirname, 'sequelize/config.js'),
-    'models-path': path.resolve('db', 'models'),
+    'config': path.resolve(__dirname, 'config/config.json'),
     'migrations-path': path.resolve(__dirname, 'sequelize/migrations'),
 };
