--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@hapi/joi": "^17.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi-objectid": "^3.0.1",
+    "lodash": "^4.17.15",
     "sequelize": "^5.21.12",
     "sequelize-auto-migrations": "^1.0.3",
     "sqlite3": "^4.2.0"
